# python-orm-study

./: .gitignore  README.md  basic.ipynb  docker-compose.yml  pyproject.toml
package/: test.py
package/config/: settings.py
package/databases/: drop.py  engine.py  initialize.py  session.py
package/databases/models/: __init__.py  longterm.py  project.py  user.py  workspace.py
